Fix home layout issue in smaller screens

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,12 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  justify-content: space-between;
+  min-height: 100vh;
   & .container {
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 100%;
     & .filter {
       display: flex;
       width: 940px;
